--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -3,7 +3,9 @@
     <div class="container-soutenir">
       <div id="bilan"></div>
       <h1 class="header text-primary pt-5 text-center">DONNÉES</h1>
-      <h2 class="green-bg mt-5">Bilan</h2>
+      <% if Date.today <= "13/06/2019".to_date %>
+        <h2 class="green-bg mt-5">Bilan</h2>
+      <% end %>
 
       <div id="dechets"></div>
       <div class="text-center mt-4">
@@ -14,9 +16,9 @@
           <%= link_to "Diagnostic comportemental Structure", new_company_behaviour_diag_path, class:"btn btn-primary bold" %>
         <% elsif current_user.referent? && Date.today < current_user.company.project.diagnostic_end_at %>
           <%= link_to "Diagnostic comportemental Structure", company_behaviour_diag_path(:step_one), class:"btn btn-primary bold" %>
-        <% elsif current_user.referent? && Date.today > current_user.company.project.bilan_start_at && (current_user.company.company_behaviours.last.nil? || current_user.company.company_behaviours.last.created_at <= current_user.company.project.diagnostic_end_at) %>
+        <% elsif current_user.referent? && Date.today > current_user.company.project.bilan_start_at && (current_user.company.company_behaviours.last.nil? && Date.today <= "13/06/2019".to_date || current_user.company.company_behaviours.last.created_at <= current_user.company.project.diagnostic_end_at) && Date.today <= "13/06/2019".to_date %>
           <%= link_to "Bilan comportemental Structure", new_company_behaviour_result_path, class:"btn btn-primary bold" %>
-        <% elsif current_user.referent? && Date.today > current_user.company.project.bilan_start_at %>
+        <% elsif current_user.referent? && Date.today > current_user.company.project.bilan_start_at && Date.today <= "13/06/2019".to_date%>
           <%= link_to "Bilan comportemental Structure", company_behaviour_result_path(:step_one), class:"btn btn-primary bold" %>
         <% end %>
 
@@ -27,9 +29,9 @@
             <%= link_to "Diagnostic comportemental Collaborateur·rice", comportamental_formulaire_path(:page_one), class:"btn btn-primary bold" %>
           <% end %>
 
-          <% if current_user.user_behaviour_result.nil? && Date.today > current_user.company.project.bilan_start_at %>
+          <% if current_user.user_behaviour_result.nil? && Date.today > current_user.company.project.bilan_start_at && Date.today <= "13/06/2019".to_date%>
             <%= link_to "Bilan comportemental Collaborateur·rice", new_result_comportamental_formulaire_path, class:"btn btn-primary bold" %>
-          <% elsif Date.today > current_user.company.project.bilan_start_at %>
+          <% elsif Date.today > current_user.company.project.bilan_start_at && Date.today <= "13/06/2019".to_date%>
             <%= link_to "Bilan comportemental Collaborateur·rice", result_comportamental_formulaire_path(:start), class:"btn btn-primary bold" %>
           <% end %>
         </div>
@@ -112,7 +114,7 @@
           <p class="mb-0 bold"><%= current_user.company.referent.user.telephone %></p>
           <p class="mb-0 bold"><%= current_user.company.referent.user.email %></p>
         <% end %>
-        
+
         <div class="pane pane--table1 mt-4">
           <div class="pane-hScroll2">
             <table class="table table-striped table-hover">
