--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -3,7 +3,7 @@
     <div class="container-soutenir">
       <div id="bilan"></div>
       <h1 class="header text-primary pt-5 text-center">DONNÉES</h1>
-      <% if Date.today <= "13/06/2019".to_date %>
+      <% if Date.today <= "13/06/2019".to_date || current_user.admin?%>
         <h2 class="green-bg mt-5">Bilan</h2>
       <% end %>
 
@@ -18,7 +18,7 @@
           <%= link_to "Diagnostic comportemental Structure", company_behaviour_diag_path(:step_one), class:"btn btn-primary bold" %>
         <% elsif current_user.referent? && Date.today > current_user.company.project.bilan_start_at && (current_user.company.company_behaviours.last.nil? && Date.today <= "13/06/2019".to_date || current_user.company.company_behaviours.last.created_at <= current_user.company.project.diagnostic_end_at) && Date.today <= "13/06/2019".to_date %>
           <%= link_to "Bilan comportemental Structure", new_company_behaviour_result_path, class:"btn btn-primary bold" %>
-        <% elsif current_user.referent? && Date.today > current_user.company.project.bilan_start_at && Date.today <= "13/06/2019".to_date%>
+        <% elsif current_user.admin? || current_user.referent? && Date.today > current_user.company.project.bilan_start_at && Date.today <= "13/06/2019".to_date %>
           <%= link_to "Bilan comportemental Structure", company_behaviour_result_path(:step_one), class:"btn btn-primary bold" %>
         <% end %>
 
@@ -31,7 +31,7 @@
 
           <% if current_user.user_behaviour_result.nil? && Date.today > current_user.company.project.bilan_start_at && Date.today <= "13/06/2019".to_date%>
             <%= link_to "Bilan comportemental Collaborateur·rice", new_result_comportamental_formulaire_path, class:"btn btn-primary bold" %>
-          <% elsif Date.today > current_user.company.project.bilan_start_at && Date.today <= "13/06/2019".to_date%>
+          <% elsif current_user.admin? || Date.today > current_user.company.project.bilan_start_at && Date.today <= "13/06/2019".to_date  %>
             <%= link_to "Bilan comportemental Collaborateur·rice", result_comportamental_formulaire_path(:start), class:"btn btn-primary bold" %>
           <% end %>
         </div>
