--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -57,10 +57,10 @@
         <h2 class="blue text-center"><b>Nous suivre:</b></h2>
         <div class="social-medias mt-4">
           <div>
-            <p> <%= link_to "https://www.linkedin.com/company/defi-zero-dechet-pro/" do %>
+            <p> <%= link_to "https://www.linkedin.com/company/defi-zero-dechet-pro/", class:"blue" do %>
               <i class="fab fa-linkedin"></i> DefiZeroDechetdesPros
             <% end %> </p>
-            <p> <%= link_to "https://www.facebook.com/DefiZeroDechetdesPros/", target: :blank do %>
+            <p> <%= link_to "https://www.facebook.com/DefiZeroDechetdesPros/", target: :blank, class:"blue" do %>
               <i class="fab fa-facebook-square"></i> Défi Zéro Déchet des Professionnels
             <% end %> </p>
           </div>
@@ -84,7 +84,7 @@
       <%= render "articles/preview", articles: Article.visibles_ext.sort_by { |article| article.publish_date }.last(3).reverse %>
     </div>
     <div class="text-center mt-4">
-      <%= link_to "Plus d'actualités ", articles_path, class:"btn btn-primary mb-3 bold" %>
+      <%= link_to "Plus d'actualités ", articles_path, class:"btn mb-3 bold btn-bg-blue" %>
     </div>
 
 
