--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -54,7 +54,7 @@
         </div>
       </div>
       <h2 class="mt-5 green-bg mb-4">Ils ont participé</h2>
-      <div class="row">
+      <div class="row mb-3">
         <div class="col-12 col-sm-6 col-md-4 col-lg-4">
           <div class="card my-3 bg-primary">
             <%= link_to "https://175avocats.com/", target: :blank, class:"inscription_link" do %>
@@ -463,8 +463,6 @@
         <p class="text-center m-0">Votre adresse de messagerie est uniquement utilisée pour vous envoyer les lettres d'information du Défi Zéro Déchet des Pro.</p>
         <p class="text-center mb-5">Vous pouvez à tout moment utiliser le lien de désabonnement intégré dans la newsletter. <%= link_to "En savoir plus sur la gestion de vos données et vos droits", politique_path, class:"cool-link" %></p>
       </div>
-      <hr/>
-      <b><p class="my-5">Si vous souhaitez participer à la prochaine édition du Défi Zéro Déchet des Pros (fin 2019), <%= link_to "contactez-nous", contact_path %> pour rester informé.e et faire partie des premiers participants.</p></b>
     </div>
   <%= render 'shared/footer' %>
 </div>
