texte blanc en trop

--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -127,7 +127,7 @@
               <%= image_tag "biocoop.png", width: 60, height: 60, class:"my-1" %>
             </div>
             <div class="card-body">
-              <p class="card-text m-0 text-center text-decoration-none">alimentation biologique et ecoproduits</p>
+              <p class="card-text m-0 text-center text-decoration-none">Alimentation biologique et écoproduits</p>
               <p class="m-0 text-center text-decoration-none">< 10 salarié·e·s</p>
             </div>
             <% end %>
@@ -143,7 +143,7 @@
               <%= image_tag "biocoop.png", width: 60, height: 60, class:"my-1" %>
             </div>
             <div class="card-body">
-              <p class="card-text m-0 text-center text-decoration-none text-white">alimentation biologique et ecoproduits</p>
+              <p class="card-text m-0 text-center text-decoration-none">Alimentation biologique et écoproduits</p>
               <p class="m-0 text-center text-decoration-none">< 10 salarié·e·s</p>
             </div>
             <% end %>
