--- a/app/views/pages/comment.html.erb
+++ b/app/views/pages/comment.html.erb
@@ -132,9 +132,9 @@
     <div >
       <h2 class="mb-4 mt-5 green-bg" >Planning</h2>
       <div class="d-flex justify-content-center align-items-center mb-5">
-        <%= image_tag "planning.png", style:"width: 100%", class:"px-lg-5" %>
+        <%= image_tag "planning2.png", style:"width: 100%", class:"px-lg-5" %>
       </div>
-      <ul class="list mb-2 bullet-custom">
+      <!-- <ul class="list mb-2 bullet-custom">
         <li class="my-2">
           <b>Inscription</b> : Du 19/11 au 30/12/2018
         </li>
@@ -144,7 +144,7 @@
         <li class="my-2">
           <b>Clôture</b> : Fin juin 2019, communication externe et événement de clôture, valorisant les participants et les gagnants
         </li>
-      </ul>
+      </ul> -->
     </div>
     <div id="comment6"></div>
     <div>
