changé la page d'inscription en candidature

--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -273,3 +273,12 @@ p.minus {
 .bg-grey {
   background-color: #8C8C8C;
 }
+
+.green-title {
+  color: $green;
+  font-size: 1.7rem;
+}
+
+.text-underline {
+  text-decoration: underline;
+}
