--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,16 +1,70 @@
 <div class="wrapper down">
-    <div class="container bg-white container-padding my-5">
-      <h1 class="header text-primary text-center pt-5 my-5">S'inscrire</h1>
-      <p>Vous souhaitez engager votre structure dans une démarche de réduction de déchet ? Le Défi Zéro Déchet des Pros vous propose
-        un programme adapté au public professionnel : entreprises privées et institutions publiques, de petite, moyenne et grande taille.</p>
-      <p>La prochaine édition commence en janvier 2020, pour vous inscrire rendez-vous au mois de septembre 2019 ! D’ici là, préparez-
-        vous : pour convaincre votre direction utilisez nos arguments page « Pourquoi » et découvrez toutes nos infos pratiques sur la page
-        « Comment ». Pour tout le reste :</p>
+  <div class="container bg-white container-padding my-5">
+    <h1 class="header text-primary text-center pt-5 my-5">Candidater</h1>
+    <div class="row">
+      <div class="col-12 col-md-6">
+        <h2 class="green-bg">Intra Bordeaux Métropole</h2>
+        <h3 class="mt-4 green-title">Qui peut candidater ?</h3>
+        <p>Les établissements privés ou publics, de toute taille (≥ 2collaborateur·rice·s, regroupement de structures inclus), domiciliés dans Bordeaux Métropole. Une quinzaine de structures seront accompagnées pour cette 2ème édition.</p>
+        <h3 class="mt-4 green-title">Combien ça coûte ?</h3>
+        <p>Le tarif pour 6 mois d’accompagnement est de 150€ par établissement + 10€ par collaborateur·rice rattaché·e à cet établissement.</p>
+        <p><b> Offre de lancement:</b> 50% de réduction sur le tarif de base pour les 5 premiers sélectionnés.</p>
+        <h3 class="mt-4 green-title">Comment candidater ?</h3>
+        <p><b>1.</b> Préparez-vous à convaincre votre direction. Utilisez nos arguments page « <%= link_to "Pourquoi", pourquoi_path, class:"cool-link", target:"blank" %> » et découvrez toutes nos infos pratiques sur la page « <%= link_to "Comment", "/comment", class:"cool-link", target:"blank" %>». </p>
+        <p><b>2.</b> Remplissez votre formulaire de candidature. Prenez votre temps (estimation : 10 à 40 mn). En cliquant sur « envoyer », vous engagez votre structure à participer si votre candidature est retenue</p>
+        <p><b>3.</b> L’équipe Défi sélectionne une quinzaine de structures en se basant sur la motivation et la diversité des profils. Vous serez informé·e·s le 18 décembre de l’issue donnée à votre candidature.</p>
+        <p><b>A tout moment, notre équipe se tient à votre disposition pour répondre à vos questions.</b> </p>
+      </div>
+      <div class="col-12 col-md-6">
+        <%= image_tag "carte.png", class: "w-100 my-5 p-3" %>
+        <h2 class="green-bg mb-4">Hors Bordeaux Métropole</h2>
+        <p>Votre structure n’est pas située dans Bordeaux Métropole ? Ekolo[geek] vous accompagne dans l’organisation de votre propre Défi Zéro Déchet des Pros sur votre territoire !</p>
         <div class="text-center mt-4">
           <%= link_to "Contactez-nous", contact_path, class:"btn-lg btn-bg-blue text-white text-decoration-none bold" %>
         </div>
+      </div>
+    </div>
 
-      <h2 class="mt-5 green-bg">La Cérémonie de clôture édition 2019</h2>
+    <h3 class="mt-4 green-title">Calendrier</h3>
+    <p>Plusieurs réunions d’information ont lieu pendant la période de candidature. </p>
+    <div class="h-100">
+      <iframe src="https://www.billetweb.fr/multi_event.php?user=37189#shop" width="100%" height="300" frameborder="0" class="light-border"></iframe>
+    </div>
+
+    <h2 class="green-bg my-4">Charte de participation</h2>
+    <p class="text-underline">L’établissement s’engage à :</p>
+    <div class="pl-3">
+      <p>1. Régler la facture avant le 15 février 2020. Le tarif de participation du Défi Zéro Déchet des Pros est de 150 € par
+      établissement + 10 € par collaborateur·rice. N’hésitez pas à nous contacter pour toute question.</p>
+      <p>2. Identifier un (ou deux) référent·e·s qui seront les interlocuteur·ice·s privilégié·e·s de l’équipe du Défi Zéro Déchet
+      des Pros.</p>
+      <p>3. Donner les moyens (disponibilité, technique, informations) aux référent·e·s pour qu’ils·elles assument leur
+      mission. Le rôle de référent·e nécessite environ 12 h / mois. Le succès de la participation de votre structure au
+      Défi Zéro Déchet des Pros est très lié au temps que le·s référent·e·s y consacrent. Nous conseillons donc vivement
+      d’officialiser une part de leur temps de travail pour leur participation au Défi Zéro Déchet des Pros (ex. feuille de
+      mission...).</p>
+      <p>4. Être présent à l’événement de clôture si l’établissement est déclaré gagnant. </p>
+    </div>
+    <p class="text-underline">Les référent·e·s s’engagent à :</p>
+    <div class="pl-3">
+      <p>1. Mettre en oeuvre les moyens nécessaires pour atteindre l’objectif du Défi Zéro Déchet des Pros de réduire d’au
+      moins 10% les déchets de fonctionnement de son établissement.</p>
+      <p>2. Mobiliser les collaborateur·ice·s en interne.</p>
+      <p>3. Participer aux Rencontres Collectives, en particulier à la première.</p>
+      <p>4. Faire des relevés de la production de déchets de l’établissement et renseigner sur son compte en ligne les données
+      de son établissement au moins deux fois par mois.</p>
+      <p>5. Faciliter la tenue des visites de suivi dans sa structure (trouver des créneaux, inviter les collaborateur·ice·s...)</p>
+      <p>6. Accepter de recevoir les informations et actualités du Défi Zéro Déchet des Pros et de l’organisateur <%= link_to "Ekolo[geek]", "https://www.ekologeek.com/page/165915-ecogeste-eau-energie-dechets-consommer-responsable", target: "blank", class:"cool-link" %>
+      sur son adresse mail. </p>
+    </div>
+    <div class="text-center mt-5">
+      <%= link_to "CANDIDATER", "https://docs.google.com/forms/d/e/1FAIpQLSdbI7qdcjILNiWznWoUULEYz2iNrdACBjxJXikqofZTT8UBvQ/viewform", class:"btn-lg btn-bg-blue text-white text-decoration-none bold" %>
+    </div>
+
+    <div class="minus mt-5">Conformément au règlement européen 2016/679 dit RGPD et la loi du 6 janvier 1978 modifiée, vous disposez d’un droit d’accès, de rectification et d’opposition aux informations qui vous concernent ainsi qu’un droit à la limitation du traitement de ces données, droits que vous pouvez exercer en vous adressant par courriel à pauline.r@ekologeek.com. Si vous estimez, après nous avoir contactés, que vos droits sur vos données ne pas respectés, vous pouvez adresser une réclamation à la CNIL.</div>
+
+
+
       <div class=" d-flex justify-content-center my-5 officielle">
         <%= image_tag "cloture-defit.jpg", height: 450 %>
       </div>
