changé navbar menu

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -40,7 +40,7 @@
       </li>
 
       <li class="nav-item m-3 bold-link">
-        <%= link_to "S'INSCRIRE", "/inscription", class:"nav-link text-light-gray" %>
+        <%= link_to "CANDIDATER", "/inscription", class:"nav-link text-light-gray" %>
       </li>
 
       <li class="nav-item m-3 dropdown bold-link">
