--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -20,7 +20,7 @@
         <h2 class="green-bg mb-4">Hors Bordeaux Métropole</h2>
         <p>Votre structure n’est pas située dans Bordeaux Métropole ? Ekolo[geek] vous accompagne dans l’organisation de votre propre Défi Zéro Déchet des Pros sur votre territoire !</p>
         <div class="text-center mt-4">
-          <%= link_to "Contactez-nous", contact_path, class:"btn-lg btn-bg-blue text-white text-decoration-none bold" %>
+          <%= link_to "Contactez-nous", contact_path, class:"btn-lg btn-bg-blue text-white text-decoration-none bold", target:"blank" %>
         </div>
       </div>
     </div>
@@ -58,7 +58,7 @@
       sur son adresse mail. </p>
     </div>
     <div class="text-center mt-5">
-      <%= link_to "CANDIDATER", "https://docs.google.com/forms/d/e/1FAIpQLSdbI7qdcjILNiWznWoUULEYz2iNrdACBjxJXikqofZTT8UBvQ/viewform", class:"btn-lg btn-bg-blue text-white text-decoration-none bold" %>
+      <%= link_to "CANDIDATER", "https://docs.google.com/forms/d/e/1FAIpQLSdbI7qdcjILNiWznWoUULEYz2iNrdACBjxJXikqofZTT8UBvQ/viewform", class:"btn-lg btn-bg-blue text-white text-decoration-none bold", target:"blank" %>
     </div>
 
     <div class="minus my-5">
